--- a/utilities/ui.apps/src/main/content/jcr_root/apps/utilities/components/content/tagmanager/tagmanager.html
+++ b/utilities/ui.apps/src/main/content/jcr_root/apps/utilities/components/content/tagmanager/tagmanager.html
@@ -3,7 +3,7 @@
 */-->
 <p data-sly-test="${properties.text}">Text property: ${properties.text}</p>
 Tags
-<pre data-sly-use.hello="aemutilities.core.GetTaggingTestTag" data-sly-list="${hello.tagCountBean}">
+<pre data-sly-use.hello="com.shailesh.agrahari.core.tag.manager.GetTaggingTestTag" data-sly-list="${hello.tagCountBean}">
 Title: ${item.tag.title}
 Count: ${item.usageCount}
 Path: ${item.tag.path}
